# WordSenseDisambiguation

./: .gitignore  README.md  pyproject.toml
Analysis/: analysis.ipynb  analysisUniform_chunk000.ipynb  analysisUniform_chunk001.ipynb  readme.md
Data/: Chunker.ipynb  SemCore.ipynb  SemCoreUniform.ipynb
LLM/: llama.ipynb  llama_from_source.ipynb  llama_to_jax.ipynb
LLM/llama/: chat_format.py  datatypes.py  generation.py  generation_new.py  model.py  model_new.py  tokenizer.py  tool_utils.py
LLM/llama_jax/: model.py
Processing/: 001pickle_jax_weights.ipynb  002prompt_normalisation.ipynb  003LLM_on_prompts.ipynb  Readme.md  run_script.bash  script.py
