[project]
name = "wordsensedisambiguation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "nltk>=3.9.1",
    "numpy<2",
    "ollama>=0.4.7",
    "pandas>=2.2.3",
    "safetensors>=0.5.2",
    "tqdm>=4.66",
    "transformers>=4.49.0",
    "markupsafe<=2.1.3",
    "torch",
    "llama-stack>=0.1.3",
    "sentencepiece>=0.2.0",
    "protobuf>=5.29.3",
    "accelerate>=1.4.0",
    "fairscale>=0.4.13",
    "termcolor>=2.5.0",
    "pydantic>=2.10.6",
    "jax>=0.5.1",
]

[tool.uv.sources]
torch = { index = "pytorch" }


[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
